# reddog-IMU-interface

./: README.md
hardware_manager/: CMakeLists.txt  package.xml
hardware_manager/src/: dds.cpp  main.cpp
xsens_mti_ros2_driver/include/: xdainterface.h
xsens_mti_ros2_driver/src/: xdainterface.cpp
xsens_mti_ros2_driver/src/messagepublishers/: reddogimudata.h
